# cleanarr

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  README.md  docker-compose.cuda.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_worker.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
app/: app_settings.py  config.py  content_advisor.py  database.py  deps.py  email.py  imdb_service.py  main.py  models.py  notifications.py  templates.py  worker.py
app/auth/: plex.py  sessions.py
app/plex/: client.py
app/routes/: admin.py  auth.py  browse.py  jobs.py  notifications.py  requests.py  uploads.py
app/static/: sortable.js  style.css
app/tasks/: __init__.py  registry.py  runner.py  sync_plex_paths.py
app/templates/: base.html  dashboard.html  invite_accept.html  login.html  pending.html  setup.html  upload.html
app/templates/admin/: _activity_feed.html  _tasks_rows.html  create_user.html  invite.html  queue.html  settings.html  tasks.html  users.html
tests/: conftest.py  test_access_control.py  test_app_settings.py  test_auth_password.py  test_auth_sessions.py  test_content_advisor.py  test_email.py  test_imdb_service.py  test_models.py  test_notifications.py  test_plex_client.py  test_routes_admin.py  test_routes_auth.py  test_routes_browse.py  test_routes_jobs.py  test_routes_notifications.py  test_routes_requests.py  test_routes_uploads.py  test_tasks.py  test_worker_utils.py
(+28 files in other folders)
